# motohud

./: CMakeLists.txt  main_window.cpp  main_window.h  motohud.cpp
devices/: gnss_client.cpp  gnss_client.h  ublox_parser.cpp  ublox_parser.h  ubx_types.h
widgets/: gnss_status.cpp  gnss_status.h  speedometer_compass.cpp  speedometer_compass.h
